--- a/plugins/csp-simple-wms-bodies/gui/wms_body_tab.html
+++ b/plugins/csp-simple-wms-bodies/gui/wms_body_tab.html
@@ -9,7 +9,7 @@
     <i class="material-icons" style="font-size: 22px; top:-3px;" id="wms-img-data-copyright">info</i>
   </div>
   <div class="col-6">
-    <select data-callback="simpleWmsBodies.setWMS" data-container="#cosmoscout" data-width="100%"
+    <select data-callback="simpleWMSBodies.setWMS" data-container="#cosmoscout" data-width="100%"
       class="simple-value-dropdown">
       <!-- Filled by JavaScript Function called from Plugin.cpp -->
     </select>
