:tada: Add some hints from the guide.

--- a/resources/gui/cosmoscout.html
+++ b/resources/gui/cosmoscout.html
@@ -160,19 +160,19 @@
       </div>
 
       <div id="plugin-buttons">
-        <a class="btn light-glass" data-toggle="tooltip" title="Turn north up"
+        <a id="turn-north-up-button" class="btn light-glass" data-toggle="tooltip" title="Turn north up"
           onclick="CosmoScout.callbacks.navigation.northUp()">
           <span id="compass-arrow"></span>
         </a>
-        <a class="btn light-glass" data-toggle="tooltip" title="Fix horizon"
+        <a id="fix-horizon-button" class="btn light-glass" data-toggle="tooltip" title="Fix horizon"
           onclick="CosmoScout.callbacks.navigation.fixHorizon()">
           <i class="material-icons">terrain</i>
         </a>
-        <a class="btn light-glass" data-toggle="tooltip" title="Launch to orbit"
+        <a id="launch-to-orbit-button" class="btn light-glass" data-toggle="tooltip" title="Launch to orbit"
           onclick="CosmoScout.callbacks.navigation.toOrbit()">
           <i class="material-icons">flight_takeoff</i>
         </a>
-        <a class="btn light-glass" data-toggle="tooltip" title="Land on surface"
+        <a id="land-on-surface-button" class="btn light-glass" data-toggle="tooltip" title="Land on surface"
           onclick="CosmoScout.callbacks.navigation.toSurface()">
           <i class="material-icons">flight_land</i>
         </a>
