:wrench: Fix spelling error

--- a/plugins/csp-user-study/gui/user-study-stage.html
+++ b/plugins/csp-user-study/gui/user-study-stage.html
@@ -168,7 +168,7 @@
   <div id="cp">
     <div id="chs"></div>
     <div id="fms">
-      <P>How intense are your cyber-sickness symptons?</P>
+      <P>How intense are your cyber-sickness symptoms?</P>
       <div data-callback="setFMS"></div>
       <input class="btn" type="button" value="Confirm" onclick="window.callNative('confirmFMS')">
     </div>
