--- a/plugins/csp-user-study/gui/user-study-stage.html
+++ b/plugins/csp-user-study/gui/user-study-stage.html
@@ -58,17 +58,6 @@
   </script>
 
   <style>
-    #cp {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 100%;
-      border: 10px solid rgb(255, 255, 255);
-      background: radial-gradient(circle, rgba(0, 0, 0, 0) 40%, rgb(15, 160, 228) 100%);
-    }
-
     P {
       text-shadow: 1px 1px 1px #000, 0px 0px 1px #000, 1px 1px 5px rgb(0 0 0 / 75%);
       font-size: 1.2em;
@@ -109,6 +98,33 @@
       }
     }
 
+    body:not(.stage0)>#cp::before {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 100%;
+      background: repeating-linear-gradient(45deg,
+          #cdd1e991,
+          #cdd1e991 15px,
+          #70737d 15px,
+          #70737d 30px);
+      content: "";
+      z-index: -1;
+    }
+
+    #cp {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 100%;
+      border: 10px solid rgb(255, 255, 255);
+    }
+
+    #cp {
+      background: radial-gradient(circle, rgba(0, 0, 0, 0) 40%, rgb(15, 160, 228) 100%);
+    }
 
     #cp.fms {
       background: radial-gradient(circle, rgba(0, 0, 0, 0) 40%, rgba(255, 201, 102, 1) 100%);
