:wrench: Add default values

--- a/plugins/csp-user-study/gui/user_study_settings.html
+++ b/plugins/csp-user-study/gui/user_study_settings.html
@@ -28,7 +28,7 @@
 
 <div class="row mb-3">
   <div class="col-12 input-group">
-    <input id="user-study-save-file-name" type="text" class="form-control">
+    <input id="user-study-save-file-name" type="text" class="form-control" value="test-scenario.json">
     <div class="input-group-append">
       <button class="btn glass fix-rounded-right" type="button"
         onclick="CosmoScout.callbacks.core.save(document.getElementById('user-study-save-file-name').value)">Save
@@ -39,7 +39,7 @@
 
 <div class="row mb-3">
   <div class="col-12 input-group">
-    <input id="user-study-load-file-name" type="text" class="form-control">
+    <input id="user-study-load-file-name" type="text" class="form-control" value="test-scenario.json">
     <div class="input-group-append">
       <button class="btn glass fix-rounded-right" type="button"
         onclick="CosmoScout.callbacks.core.load(document.getElementById('user-study-load-file-name').value)">Load
