:wrench: Tweak checkpoint wording

--- a/plugins/csp-user-study/gui/user-study-stage.html
+++ b/plugins/csp-user-study/gui/user-study-stage.html
@@ -298,7 +298,7 @@
     </div>
     <div id="cog">
       <img src="img/stance.png" alt="">
-      <P>Click "Start", look straight ahead, and assume the above stance.</P>
+      <P>After clicking "Start", you have 5s to assume the above stance. Then don't move for 10s.</P>
       <input id="start-cog-measurement-button" class="btn" type="button" value="Start" onclick="startCOGMeasurement()">
     </div>
     <div id="msg">
