--- a/plugins/csp-lod-bodies/gui/lod_body_settings.html
+++ b/plugins/csp-lod-bodies/gui/lod_body_settings.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 SPDX-FileCopyrightText: German Aerospace Center (DLR) <cosmoscout@dlr.de>
 SPDX-License-Identifier: MIT
 -->
@@ -15,6 +15,15 @@ SPDX-License-Identifier: MIT
   </div>
   <div class="col-6">
     <div data-callback="lodBodies.setTerrainLod" class="unresponsive">
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-5">
+    Tesselation Level
+  </div>
+  <div class="col-7">
+    <div data-callback="lodBodies.setTesselationFactor">
     </div>
   </div>
 </div>
