:wrench: Get WCS to work.

--- a/resources/gui/cosmoscout.html
+++ b/resources/gui/cosmoscout.html
@@ -866,6 +866,7 @@ SPDX-License-Identifier: MIT
   <script type="text/javascript" src="js/apis/geocode.js"></script>
   <script type="text/javascript" src="js/apis/utils.js"></script>
   <script type="text/javascript" src="js/apis/bookmark_editor.js"></script>
+  <script type="text/javascript" src="js/apis/transfer_function_editor.js"></script>
 
   <script type="text/javascript">
 
@@ -882,7 +883,8 @@ SPDX-License-Identifier: MIT
         CalendarApi,
         GeoCodeApi,
         BookmarkEditorApi,
-        TimelineApi
+        TimelineApi,
+        TransferFunctionEditorApi
       );
 
       const slider = document.querySelector('[data-callback="graphics.setShadowmapResolution"]');
