--- a/plugins/csp-wfs-overlays/gui/wfs_overlays_tab.html
+++ b/plugins/csp-wfs-overlays/gui/wfs_overlays_tab.html
@@ -20,13 +20,13 @@ SPDX-License-Identifier: MIT
       
   <div class="row mb-1">
     <div class="col-5">
-      <label>Image Channel</label>
+      <label>Feature type</label>
     </div>
     <div class="col-1">
       <i class="material-icons" style="font-size: 22px; top:-3px;" id="wmsOverlays-infoIcon">info</i>
     </div>
     <div class="col-6">
-      <select data-callback="wmsOverlays.setLayer" data-container="#cosmoscout" data-width="100%"
+      <select data-callback="wfsOverlays.setWFSFeatureType" data-container="#cosmoscout" data-width="100%"
         class="simple-value-dropdown" data-dropdown-align-right="true" data-live-search="true">
         <!-- Filled by JavaScript Function called from Plugin.cpp -->
       </select>
