--- a/plugins/csp-wfs-overlays/gui/wfs_overlays_tab.html
+++ b/plugins/csp-wfs-overlays/gui/wfs_overlays_tab.html
@@ -33,6 +33,23 @@ SPDX-License-Identifier: MIT
     </div>
   </div>  
 
+  <div class="row mb-1">
+    <div class="col-5">
+      <label>Properties</label>
+    </div>
+  </div>
+    <table id = "tableContainer" style = "width: 100%"> 
+      <thead>
+        <th>Property Name:</th>
+        <th>Type:</th>
+        <th>Color:</th>
+        <th>Time:</th>
+      </thead>
+      <tbody id = "tableBody">
+        <!-- Filled by JavaScript Function called from Plugin.cpp --> 
+      </tbody>
+    </table>
+
   <div class="strike">
     <span>Style</span>
   </div>
